Fixed z-index

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,6 +25,7 @@ body {
     justify-self: center;
     border-radius: 15px;
     filter: drop-shadow(0 0 25px rgba(0, 0, 0, 0.5));
+    z-index: 1;
 }
 
 .voteBlue {
@@ -40,6 +41,8 @@ body {
 
     animation-name: loadBlue;
     animation-duration: 3s;
+
+    z-index: 2;
 }
 
 .voteRed {
@@ -55,6 +58,8 @@ body {
 
     animation-name: loadRed;
     animation-duration: 3s;
+
+    z-index: 2;
 }
 
 @keyframes loadBlue {
